# hawk_test

./: CMakeLists.txt  HawkCameraController.cpp  HawkCameraController.h  README.md  main.cpp
camera-controller/: CMakeLists.txt  FrameProcessingInterface.h  HawkCameraController.cpp  HawkCameraController.h  OpenCVFrameProcessor.cpp  OpenCVFrameProcessor.h
